2004-02-18  Christian Stimming <stimming@tuhh.de>

	* configure.in: Released version 0.7

	* src/bankdata/bankdata.txt: Updated, now valid from 2004-03-08
	onwards.

2004-01-28  Christian Stimming <stimming@tuhh.de>

	* README.WIN32: Windows DLLs can be built. This is described in
	this file.

	* configure.in, everywhere: Improve build system for compiling on
	Windows/mingw.

2004-01-27  Christian Stimming <stimming@tuhh.de>

	* src/bin/ktoblzcheck.cc: Fix handling of bankdata path
	argument. Also, add argument "--bankdata-path" that (guess what)
	prints the bankdata path.

	* src/bin/Makefile.am, check_ktoblzcheck: Add test script and
	"make check" target. Clean up makefiles.

2004/01/19: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- applied a multi-distribution patch for RPMs submitted by
  Ronny Buchmann. Thanks to him it is now much easier to create RPMs for
  the various distributions ;-)


2004-01-02  Christian Stimming  <stimming@tuhh.de>

	* AUTHORS: Add remark about authors and contributors. Add
	copyright notices to other headers.

2003-11-29  Christian Stimming  <stimming@tuhh.de>

	* configure.in: Released version 0.6.
	
	* src/bankdata/bankdata.txt: Updated, now valid from 2003-12-03
	onwards.

	* src/bankdata/bundesbank.sed: Remove \r\n line endings to fix sed
	script, after the hint by Thomas Viehmann <tv@beamnet.de>.

2003-11-19  Christian Stimming <stimming@tuhh.de>

	* configure.in: released version 0.5. Added argument for compile
	switches.

2003-10-29  Fabian Kaiser <fabian@openhbci.de>

	* src/bankdata/bankdata.txt: Updated, now valid from 2003-07-31
	onwards.

	* src/lib/algorithms.cc: Fix for algo04 (method 52)

2003-09-01  Christian Stimming <stimming@tuhh.de>

	* src/lib/ktoblzcheck.cc: Implementation for A6, A7, A8 algorithms
	by Daniel Gloeckner <daniel-gl@gmx.net>.

	* src/bankdata/bundesbank.sed: Script for ascii file conversion by
	Daniel Gloeckner <daniel-gl@gmx.net>.
