@@ -9,3 +9,4 @@ contributions:
 
 Jens Gecius <jens@gecius.de>
 Daniel Gloeckner <daniel-gl@gmx.net>
+Gerhard Gappmeier <gerhard.gappmeier@ascolab.com>
