@@ -6,3 +6,4 @@ Makefile.in
 ktoblzcheck
 ctest
 benchmark
+ibanchk
