@@ -1,5 +1,4 @@
 # Simply copy the header file to includedir
-iheaderdir=${includedir}
-
 include_HEADERS = \
-  ktoblzcheck.h 
+  ktoblzcheck.h \
+  iban.h
